2015-09-29  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/setup/incidents_setup.php
	  operation/incidents/incident_detail.php: Added
	option 'Ignore user creator by default'.

2015-09-29  Vanessa Gil <vanessa.gil@artica.es>

	* integria_db.php
	  operation/side_menu.php: Fixed minor bugs.

2015-09-28  Isaac Castellano <isaac.castellano@artica.es>

	* include/functions_form.php: search table modified.

2015-09-24  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_db.php
	  operation/projects/task.php: Added string to translate.

	* include/functions_form.php
	  include/functions_groups.php
	  include/functions_incidents.php
	  operation/incidents/incident_search.php
	  : Show hierarchy of groups in search.

	* include/integria_cron.php: Added feature 'Max. e-mails sent 
	per execution'.

	* include/ajax/incidents.php: Added missing ')'.

	* include/languages/index.pot: Update translations.

	* operation/incidents/incident_detail.php: Display resolution
	only when the state is closed.

2015-09-23  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extras/mr/30.sql,
	  integria_dbdata.sql: Added the MR30.

2015-09-23  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_db.mysql.php: Fixed the function
	'update_db_schema' to update al the MR files at once.

2015-09-21  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/setup/setup_crm.php
	  include/functions_form.php
	  include/ajax/crm.php
	  operation/incidents/incident_detail.php
	  operation/invoices/invoice_detail.php
	  operation/invoices/invoices.php: Improved ids generator
	to create invoices.

2015-09-17  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/incidents/incident_workunits.php: Fixed a
	visual error.
	
2015-09-17  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/incidents/incident_workunits.php: Now the images
	uploaded to a ticket can be previewed in the ticket comments.

	* include/styles/integria.css: Added styles to the image